--- a/html/www/locales/en/translation.json
+++ b/html/www/locales/en/translation.json
@@ -1880,7 +1880,7 @@
   "print_paper_wallet": "Print Paper Wallet",
   "paper_wallet": "Paper Wallet",
   "print": "Print",
-  "nxt_ardor_paper_wallet": "NXT and Ardor Paper Wallet",
+  "nxt_ardor_paper_wallet": "GTD Paper Wallet",
   "accept": "Accept",
   "load": "Load",
   "your_account_is": "Your public account address is:",
